--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
         <style>
             body{
                 background-color: whitesmoke;
-                color:black;
+                color: black;
                 text-align: center;
+            }
 
+            button{
+                color: crimson;
+                border: none;
+                font-weight: bold;
+                background: none;
+            }
+
+            button.fat{
+                color: white;
+                background-color: crimson;
+            }
+
+            #footer a {
+                color: black;
+                text-decoration: none;
+            }
+
+            .hide{
+                display: none;
             }
         </style>
     </head>
@@ -27,10 +47,20 @@
         </p>
 
         <button>+ Adicionar Ideia</button>
-        <button>Ver Ideias</button>
+        <button class="fat">Ver Ideias</button>
 
         <p id="footer">
             Com ♥️ <a href="http://rocketseat.com.br">Rocketseat</a>
         </p>
+        <script>
+            document
+                .querySelector('button.fat')
+                .addEventListener('click',function(){
+                    document
+                        .querySelector('#footer')
+                        .classList
+                        .toggle('hide')
+                })
+        </script>
     </body>
 </html>
