--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <div id="container">
             <section id="intro">
                 <header>
-                    <img src="logo.png" alt="Imagem da Logomarca">
+                    <a href="index.html">
+                        <img src="logo.png" alt="Imagem da Logomarca">
+                    </a>
                 </header>
                 <main>
                     <p>
@@ -27,12 +29,10 @@
                 </main>
                 <section id="buttons">
                     <button onclick="onOFF()">+ Adicionar Ideia</button>
-                    <button class="fat">Ver Ideias</button>
+                    <a href="ideias.html" class="button">Ver Ideias</a>
                 </section>
                 <footer>
-                    <p id="footer">
-                        Com ♥️ <a href="http://rocketseat.com.br">Rocketseat</a>
-                    </p>
+                    Com ♥️ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
                 </footer>
             </section>
             <section id="last-ideas">
